Footer fixed/scroll overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
+html, body {
+  height:100%;
+}
+
 .App {
   text-align: center;
+  height:100%;
 }
 
 body {
@@ -14,17 +19,22 @@ body {
   background-color: yellow;
   position: fixed;
   top: 0;
-  width: 100%
+  width: 100%;
+  height: 15vh;
 }
 
 .main {
- display: flex;
- flex-direction: column;
+  height: 80vh;
+  overflow: scroll;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15vh;
 }
 
 .footer {
   position: sticky;
-  bottom: auto;
+  bottom: 0;
+  height: 5vh;
   background-color: yellow;
 }
 
